--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20200714/pngtree-modern-double-color-futuristic-neon-background-image_351866.jpg);
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     background-size: cover;
     margin: 0;
     padding: 0;
